# task_navigation

./: README.md  requirements.txt
g1/FAST_LIO_LOCALIZATION_HUMANOID/FAST_LIO/: CMakeLists.txt
g1/FAST_LIO_LOCALIZATION_HUMANOID/Navigation/: CMakeLists.txt  package.xml
g1/FAST_LIO_LOCALIZATION_HUMANOID/Navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
g1/FAST_LIO_LOCALIZATION_HUMANOID/Navigation/launch/: nav_test.launch
g1/FAST_LIO_LOCALIZATION_HUMANOID/Navigation/rviz/: navi.rviz
g1/FAST_LIO_LOCALIZATION_HUMANOID/Navigation/scripts/: costmap_diagnostics.py
g1/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/: CMakeLists.txt
g1/audio/: voice_remote_controller.py  xfyun_tts_client.py
g1/audio/iat_ws_python3_demo/: iat_ws_python3.py
g1/g1_base_controller/arm/: arm_controller.py
g1/g1_base_controller/loco/: emergency_stop_monitor.py  g1_base_control.sh  g1_base_controller.py
g1/task_system/: test_camera_fixed.py  test_mutiplate_support.py
g1/task_system/src/: __init__.py  navigation_point_recorder.py  run_navigation_recorder.sh  test_tts_integration.py
go2/FAST_LIO_LOCALIZATION_HUMANOID/: README.MD
go2/audio/: test_tts_client.py  voice_remote_controller.py  xfyun_tts_client.py
go2/audio/tts_ws_python3_demo/: tts_ws_python3_demo.py
go2/go2_base_controller/loco/: emergency_stop_monitor.py  go2_base_control.sh  go2_base_controller.py  remote_controller.py  test_remote.py
go2/task_system/: README.md  run_task_system.sh
scripts/: mapping.sh  start.sh
(+69 files in other folders)
